--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.4",
     "@auth0/angular-jwt": "^3.0.0",
     "alertifyjs": "^1.11.4",
+    "angular-tree-component": "^8.4.0",
     "bootstrap": "^4.3.1",
     "bootswatch": "^4.3.1",
     "font-awesome": "^4.7.0",
